[gd_scene load_steps=13 format=2]

[ext_resource path="res://pck/assets/common/zawgyi-one.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://pck/assets/HomeScence/image-main-background.png" type="Texture" id=2]
[ext_resource path="res://pck/assets/slots/F BT.png" type="Texture" id=3]
[ext_resource path="res://start/button.gd" type="Script" id=4]
[ext_resource path="res://pck/assets/HomeScence/icon-bottom-bar.png" type="Texture" id=5]
[ext_resource path="res://pck/assets/HomeScence/icon-home-money.png" type="Texture" id=6]
[ext_resource path="res://pck/assets/menu/shweshan.png" type="Texture" id=7]
[ext_resource path="res://pck/assets/menu/icon-main-back.png" type="Texture" id=8]
[ext_resource path="res://pck/scenes/fishSlots.gd" type="Script" id=9]
[ext_resource path="res://pck/scripts/button.gd" type="Script" id=10]
[ext_resource path="res://pck/prefabs/loadingScreen.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 35
use_filter = true
font_data = ExtResource( 1 )

[node name="fishSlots" type="Node2D"]
script = ExtResource( 9 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 1001.5, 451.5 )
scale = Vector2( 0.86849, 0.839815 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Icon-bottom-bar" type="Sprite" parent="."]
position = Vector2( 997.563, 34.82 )
scale = Vector2( 0.558021, 0.550208 )
texture = ExtResource( 5 )

[node name="slotContainer" type="VBoxContainer" parent="."]
margin_left = 192.0
margin_top = 180.0
margin_right = 1892.0
margin_bottom = 910.0

[node name="slotProviderContainer" type="GridContainer" parent="slotContainer"]
margin_right = 1700.0
margin_bottom = 610.0
grow_vertical = 0
custom_constants/vseparation = 50
custom_constants/hseparation = 50
columns = 5

[node name="boom legend" type="TextureButton" parent="slotContainer/slotProviderContainer"]
margin_right = 280.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="mega fishing" type="TextureButton" parent="slotContainer/slotProviderContainer"]
margin_left = 330.0
margin_right = 610.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="dragon fortune" type="TextureButton" parent="slotContainer/slotProviderContainer"]
margin_left = 660.0
margin_right = 940.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="happy fishing" type="TextureButton" parent="slotContainer/slotProviderContainer"]
margin_left = 990.0
margin_right = 1270.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="dinosaur tycoon" type="TextureButton" parent="slotContainer/slotProviderContainer"]
margin_left = 1320.0
margin_right = 1600.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="jackpot fishing" type="TextureButton" parent="slotContainer/slotProviderContainer"]
margin_top = 330.0
margin_right = 280.0
margin_bottom = 610.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="bombing fishing" type="TextureButton" parent="slotContainer/slotProviderContainer"]
margin_left = 330.0
margin_top = 330.0
margin_right = 610.0
margin_bottom = 610.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="royal fishing" type="TextureButton" parent="slotContainer/slotProviderContainer"]
margin_left = 660.0
margin_top = 330.0
margin_right = 940.0
margin_bottom = 610.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="all-star fishing" type="TextureButton" parent="slotContainer/slotProviderContainer"]
margin_left = 990.0
margin_top = 330.0
margin_right = 1270.0
margin_bottom = 610.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )

[node name="Balance_Boarder" type="Sprite" parent="."]
position = Vector2( 492, 46 )
scale = Vector2( 0.589109, 0.589109 )
texture = ExtResource( 6 )

[node name="Balance" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 397.0
margin_top = 26.0
margin_right = 547.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Slots" type="Sprite" parent="."]
position = Vector2( 1820, 45 )
scale = Vector2( 0.58, 0.58 )
texture = ExtResource( 3 )

[node name="Back" type="TextureButton" parent="."]
margin_right = 220.0
margin_bottom = 135.0
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 4
script = ExtResource( 10 )

[node name="loadingScreen" parent="." instance=ExtResource( 11 )]
visible = false

[connection signal="pressed" from="slotContainer/slotProviderContainer/boom legend" to="." method="on_fish_slot_pressed" binds= [ "Boom Legend", "JILI-FISH-008" ]]
[connection signal="pressed" from="slotContainer/slotProviderContainer/mega fishing" to="." method="on_fish_slot_pressed" binds= [ "Mega Fishing", "JILI-FISH-007" ]]
[connection signal="pressed" from="slotContainer/slotProviderContainer/dragon fortune" to="." method="on_fish_slot_pressed" binds= [ "Dragon Fortune", "JILI-FISH-006" ]]
[connection signal="pressed" from="slotContainer/slotProviderContainer/happy fishing" to="." method="on_fish_slot_pressed" binds= [ "Happy Fishing", "JILI-FISH-005" ]]
[connection signal="pressed" from="slotContainer/slotProviderContainer/dinosaur tycoon" to="." method="on_fish_slot_pressed" binds= [ "Dinosaur Tycoon", "JILI-FISH-004" ]]
[connection signal="pressed" from="slotContainer/slotProviderContainer/jackpot fishing" to="." method="on_fish_slot_pressed" binds= [ "Jackpot Fishing", "JILI-FISH-003" ]]
[connection signal="pressed" from="slotContainer/slotProviderContainer/bombing fishing" to="." method="on_fish_slot_pressed" binds= [ "Bombing Fishing", "JILI-FISH-002" ]]
[connection signal="pressed" from="slotContainer/slotProviderContainer/royal fishing" to="." method="on_fish_slot_pressed" binds= [ "Royal Fishing", "JILI-FISH-001" ]]
[connection signal="pressed" from="slotContainer/slotProviderContainer/all-star fishing" to="." method="on_fish_slot_pressed" binds= [ "All-star Fishing", "JILI-FISH-009" ]]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
